@@ -1,5 +1,15 @@
 2013-04-24  Albert Chu <chu11@llnl.gov>
 
+	Update for FRU Storage Definition Revision 1.2.
+
+	* libfreeipmi/include/freeipmi/record-format/ipmi-fru-information-record-format.h:
+	Define new macro IPMI_FRU_MFG_DATE_TIME_UNSPECIFIED.
+
+	* ipmi-fru/ipmi-fru-output.c (ipmi_fru_output_board_info_area):
+	Output manufacturing time as unspecified as appropriate.
+	
+2013-04-24  Albert Chu <chu11@llnl.gov>
+
 	* ipmi-dcmi/ipmi-dcmi.c (_sensor_info_output): Fix output
 	calculation errors.
 	
